# datafusion-ducklake

./: CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md
benchmark/: Cargo.toml
docs/: rowid-lineage-physical-position-plan.md
examples/: compaction_demo.rs  compare_rowid_against_duckdb.rs  maintenance_demo.rs  maintenance_demo.sql  orphan_cleanup_demo.rs  rowid_lifecycle.rs
src/: catalog.rs  column_rename.rs  compaction.rs  delete_exec.rs  delete_filter.rs  error.rs  information_schema.rs  insert_exec.rs  lib.rs  maintenance.rs  metadata_provider.rs  metadata_provider_duckdb.rs  metadata_provider_mysql.rs  metadata_provider_postgres.rs  metadata_provider_sqlite.rs  metadata_writer.rs  metadata_writer_duckdb.rs  metadata_writer_mysql.rs  metadata_writer_postgres.rs  metadata_writer_sqlite.rs  multicatalog.rs  multicatalog_provider.rs  partition.rs  positional_source.rs  row_id.rs  schema.rs  snapshot_filter.rs  stats_collect.rs  stats_encode.rs  table.rs  table_changes.rs  table_deletions.rs  table_writer.rs  types.rs  update_exec.rs
tests/: append_with_deletes_postgres_tests.rs  append_with_deletes_tests.rs  column_stats_tests.rs  compaction_postgres_tests.rs  compaction_sqlite_tests.rs  encryption_tests.rs  hybrid_asyncdb.rs  maintenance_sqlite_tests.rs  multicatalog_hardening_tests.rs  multicatalog_postgres_tests.rs  multicatalog_provider_tests.rs  mysql_metadata_provider_test.rs  mysql_metadata_writer_test.rs  object_store_integration_test.rs  partition_pruning_tests.rs  positional_delete_oracle_postgres_tests.rs  positional_delete_oracle_tests.rs  postgres_metadata_provider_test.rs  renamed_columns_tests.rs  row_id_tests.rs  sql_delete_postgres_tests.rs  sql_delete_tests.rs  sql_update_postgres_tests.rs  sql_update_tests.rs  sql_write_tests.rs  sqlite_metadata_provider_test.rs  table_changes_tests.rs  type_promotion_tests.rs  write_tests.rs
