[workspace]
members = [".", "benchmark"]

[package]
name = "datafusion-ducklake"
version = "0.3.1"
edition = "2024"
authors = ["zac@hotdata.dev", "shefeek@hotdata.dev", "anoop@hotdata.dev"]
description = "DuckLake query engine for rust, built with datafusion."
license = "Apache-2.0"
repository = "https://github.com/hotdata-dev/datafusion-ducklake"
homepage = "https://github.com/hotdata-dev/datafusion-ducklake"
documentation = "https://docs.rs/datafusion-ducklake"
readme = "README.md"
keywords = ["datafusion", "duckdb", "ducklake", "iceberg", "datalake"]
categories = ["database", "filesystem"]
exclude = ["datafusion-ducklake.iml", "target", "tests/test_data"]

[dependencies]
datafusion = "54"
datafusion-datasource = "54"
arrow = "58"
parquet = { version = "58", features = ["async"] }
object_store = { version = "0.13", features = ["aws"] }
url = "2.5"
percent-encoding = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
thiserror = "2.0"

# Encryption support (optional)
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

# Write support (optional)
uuid = { version = "1.0", features = ["v4"], optional = true }
# Used by the maintenance API (ExpireCriteria/CleanupCriteria OlderThan).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
# Staging file for streaming table writes (see table_writer::TableWriteSession).
tempfile = { version = "3.14", optional = true }

# Metadata providers (optional)
duckdb = { version = "1.4.1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio", "postgres", "mysql"] }
tempfile = "3.14"
anyhow = "1.0"
aws-sdk-s3 = "1.75"
aws-credential-types = "1.2"
sqllogictest = "0.23"

[features]
default = ["metadata-duckdb", "duckdb-bundled"]

# Allow skipping tests that use docker (in CI, macos doesn't support docker).
skip-tests-with-docker = []

# Metadata provider backends
metadata-duckdb = ["dep:duckdb"]
metadata-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/chrono", "sqlx/tls-rustls-ring"]
metadata-mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/chrono"]
metadata-sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/chrono"]

# Compile DuckDB C++ from source and statically bundle it. Enabled by default.
# Consumers who want to dynamically link against a system libduckdb can disable
# this by using `default-features = false, features = ["metadata-duckdb"]`.
duckdb-bundled = ["metadata-duckdb", "duckdb/bundled"]

# Encryption support for Parquet files
encryption = ["parquet/encryption", "datafusion/parquet_encryption", "dep:base64", "dep:hex"]

# Write support
write = ["dep:uuid", "dep:chrono", "dep:tempfile"]
write-sqlite = ["write", "metadata-sqlite"]
write-postgres = ["write", "metadata-postgres", "multicatalog-postgres"]
# Multicatalog read provider (independent of write support)
multicatalog-postgres = ["metadata-postgres"]

# Rowid verification examples need both the DuckDB extension (writes the
# catalog + writes data) and the postgres provider (DataFusion-side reads).
[[example]]
name = "compare_rowid_against_duckdb"
required-features = ["metadata-duckdb", "metadata-postgres"]

[[example]]
name = "rowid_lifecycle"
required-features = ["metadata-duckdb", "metadata-postgres"]

[[example]]
name = "multicatalog_write"
required-features = ["write-postgres"]

[[example]]
name = "maintenance_demo"
required-features = ["write-sqlite"]

[[example]]
name = "orphan_cleanup_demo"
required-features = ["write-sqlite"]
